--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "alloc_geiger"
 version = "0.1.0"
 edition = "2018"
-license = "MIT"
+license = "MIT/Apache-2.0"
 authors = ["Josh Stone <cuviper@gmail.com>"]
 repository = "https://github.com/cuviper/alloc_geiger"
 keywords = ["allocator"]
