--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
 name = "alloc_geiger"
-version = "0.1.1"
-edition = "2018"
+version = "0.2.0"
+edition = "2021"
 license = "MIT/Apache-2.0"
-authors = ["Josh Stone <cuviper@gmail.com>"]
 repository = "https://github.com/cuviper/alloc_geiger"
 keywords = ["allocator"]
 categories = ["memory-management"]
@@ -11,10 +10,11 @@ readme = "README.md"
 description = """
 A Rust allocator which makes sound when active, like a Geiger counter.
 """
+rust-version = "1.70"
 
-[dependencies.once_cell]
-version = "0.2"
+[dependencies.rodio]
+version = "0.17"
 default-features = false
 
 [dev-dependencies]
-jemallocator = "0.3"
+jemallocator = "0.5"
